# ambevtech-csharp

./: .sourcery.yaml  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: dotnet.yml  mkdocs.yml
00/links/: index.html
00/objetivos/: index.html
00/readme/: index.html
00/setup/: index.html
00/sources/: index.html
01/bases_01/: index.html
01/bases_02/: index.html
01/dotnet/: index.html
01/solution/: index.html
02.objetivo/: index.html
02/bases_03/: index.html
02/bases_04/: index.html
02/bases_05/: index.html
03/03_01_di/: index.html
03/03_02_stack_vs_heap/: index.html
04/04_01_configuracoes/: index.html
04/04_02_classe/: index.html
08/00.projeto/: index.html
assets/: setup.cast
cinder/: nav.html  search-modal.html
cinder/css/: bootstrap-custom.css  bootstrap-custom.min.css  cinder.css  cinder.min.css
css/: cinder.css  cinder.min.css
diagrams/src/: 00.objetivos.roadmap.plantuml
docs/: 02.objetivo.md  index.md
docs/00/: links.md  objetivos.md  setup.md  setup.sh.cast  sources.md
docs/00.preaula/: setup.md
docs/01/: bases_01.md  bases_02.md  dotnet.md  solution.md
docs/02/: bases_03.md  bases_04.md  bases_05.md
docs/03/: 03_01_di.md  03_02_stack_vs_heap.md
docs/04/: 04_01_configuracoes.md  04_02_classe.md
docs/08/: 00.projeto.md
search/: search_index.json
site/: index.html  sitemap.xml
site/00/: setup.sh
site/02.objetivo/: index.html
site/03/: stack_heap.puml
site/search/: search_index.json
sources/: Curso.sln  docker-compose.yaml
(+140 files in other folders)
