[tool.poetry]
name = "ambevtech-csharp"
version = "0.1.0"
description = ""
authors = ["Guionardo Furlan <guionardo.furlan@ambevtech.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-minify-plugin = "^0.6.1"
mkdocs-material = "^8.5.9"
pymdown-extensions = "^10.0"
mkdocs-build-plantuml-plugin = "^1.7.4"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-material-extensions = "^1.1"

[tool.poetry.group.dev.dependencies]
sourcery = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"